--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "1.0.0",
   "description": "Starter-kit for JavaScript projects.",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "prestart": "node scripts/pre-start.js",
+    "start": "npm-run-all --parallel security-check open:src",
+    "open:src": "node scripts/server.js",
+    "security-check": "nsp check"
+  },
   "author": "Marco Roganovic <marcoroganovic@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "chalk": "^1.1.3",
     "express": "^4.14.1",
-    "open": "0.0.5"
+    "npm-run-all": "^4.0.2",
+    "nsp": "^2.6.2",
+    "open": "0.0.5",
+    "rimraf": "^2.6.1"
   }
 }
