--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Starter-kit for JavaScript projects.",
   "main": "index.js",
   "scripts": {
-    "prestart": "node scripts/pre-start.js",
+    "prestart": "babel-node scripts/pre-start.js",
     "start": "npm-run-all --parallel security-check open:src",
-    "open:src": "node scripts/server.js",
+    "open:src": "babel-node scripts/server.js",
     "security-check": "nsp check"
   },
   "author": "Marco Roganovic <marcoroganovic@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-latest": "^6.22.0",
+    "babel-register": "^6.23.0",
     "chalk": "^1.1.3",
     "express": "^4.14.1",
     "npm-run-all": "^4.0.2",
