--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prestart": "babel-node scripts/pre-start.js",
     "start": "npm-run-all --parallel security-check open:src",
     "open:src": "babel-node scripts/server.js",
-    "security-check": "nsp check"
+    "security-check": "nsp check",
+    "webpack": "webpack"
   },
   "author": "Marco Roganovic <marcoroganovic@gmail.com>",
   "license": "ISC",
@@ -18,10 +19,14 @@
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.23.0",
     "chalk": "^1.1.3",
+    "css-loader": "^0.26.2",
     "express": "^4.14.1",
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.2",
     "open": "0.0.5",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1"
   }
 }
