--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node scripts/pre-start.js",
-    "start": "npm-run-all --parallel security-check open:src",
+    "start": "npm-run-all --parallel security-check open:src lint:watch",
     "open:src": "babel-node scripts/server.js",
+    "lint": "esw webpack.config.*  src  scripts --color",
+    "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check"
   },
   "author": "Marco Roganovic <marcoroganovic@gmail.com>",
@@ -19,6 +21,9 @@
     "babel-register": "^6.23.0",
     "chalk": "^1.1.3",
     "css-loader": "^0.26.2",
+    "eslint": "^3.16.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-watch": "^3.0.0",
     "express": "^4.14.1",
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.2",
