--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "prestart": "babel-node scripts/pre-start.js",
-    "start": "npm-run-all --parallel security-check open:src lint:watch",
+    "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
     "open:src": "babel-node scripts/server.js",
     "lint": "esw webpack.config.*  src  scripts --color",
     "lint:watch": "npm run lint -- --watch",
-    "security-check": "nsp check"
+    "security-check": "nsp check",
+    "test": "mocha --reporter progress scripts/tests.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Marco Roganovic <marcoroganovic@gmail.com>",
   "license": "ISC",
@@ -19,15 +21,19 @@
     "babel-loader": "^6.3.2",
     "babel-preset-latest": "^6.22.0",
     "babel-register": "^6.23.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "css-loader": "^0.26.2",
     "eslint": "^3.16.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-watch": "^3.0.0",
     "express": "^4.14.1",
+    "jsdom": "^9.11.0",
+    "mocha": "^3.2.0",
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.2",
     "open": "0.0.5",
+    "phantomjs": "^2.1.7",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
