--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "prestart": "babel-node scripts/pre-start.js",
     "start": "npm-run-all --parallel security-check open:src lint:watch test:watch",
+    "s": "npm start -s",
     "open:src": "babel-node scripts/server.js",
     "lint": "esw webpack.config.*  src  scripts --color",
     "lint:watch": "npm run lint -- --watch",
     "security-check": "nsp check",
     "test": "mocha --reporter progress scripts/tests.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "build": "babel-node scripts/build.js"
   },
   "author": "Marco Roganovic <marcoroganovic@gmail.com>",
   "license": "ISC",
@@ -23,11 +26,14 @@
     "babel-register": "^6.23.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
+    "cheerio": "^0.22.0",
     "css-loader": "^0.26.2",
     "eslint": "^3.16.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-watch": "^3.0.0",
     "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
     "npm-run-all": "^4.0.2",
@@ -37,6 +43,10 @@
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-md5-hash": "0.0.5"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
