--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.2",
     "open": "0.0.5",
-    "phantomjs": "^2.1.7",
     "rimraf": "^2.6.1",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-livereload-plugin": "^0.10.0",
     "webpack-md5-hash": "0.0.5"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
