--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
+    "node-sass": "^4.5.0",
     "npm-run-all": "^4.0.2",
     "nsp": "^2.6.2",
     "open": "0.0.5",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
