--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-latest": "^6.22.0",
+    "babel-preset-env": "^1.2.0",
     "babel-register": "^6.23.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
